# agrosense

./: .gitignore  Dockerfile  Dockerfile.frontend  README.md  alert_status.txt  docker-compose.yml  final_diagnosis.txt  ingest.py  pyproject.toml  requirements.txt
docs/: AgroSense_System_architecture.md  Agrosense_technical.md
frontend/: streamlit_app.py
src/agrisense/: main.py
src/agrosense/: crew.py  main.py
src/agrosense/auth/: security.py
src/agrosense/config/: agents.yaml  tasks.yaml
src/agrosense/core/: langchain_memory.py  mcp_client.py  model_router.py  prompts.py  schemas.py
src/agrosense/tools/: __init__.py  n8n_alert_tool.py  rag_tool.py  weather_price_tool.py
tests/: quick_test.py  rag_tool_test.py  run_crew.py  test_agrosense_crew.py  test_mcp_client.py  test_schemas.py
