[project]
name = "agrisense"
version = "0.1.0"
description = "Agrisense using crewAI"
authors = [{ name = "Ushindi Sidi", email = "sidiushindi@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
agrisense = "agrisense.main:run"
run_crew = "agrisense.main:run"
train = "agrisense.main:train"
replay = "agrisense.main:replay"
test = "agrisense.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
